--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
           <div class="text">
             <h2 class="title">Entre em contato com a gente!</h2>
             <p>
-              Entre em contato com a Michele Hair, queremos tirar suas dúvidas,
+              Entre em contato com a Grazi Guimaraez, quero tirar suas dúvidas,
               ouvir suas críticas e sugestões.
             </p>
             <a
-              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Oi! Gostaria de agendar um horário"
+              href="https://api.whatsapp.com/send?phone=+5511968495977&text=Oi! Gostaria de agendar um horário"
               class="button"
               target="_blank"
               ><i class="icon-whatsapp"></i> Entrar em contato</a
@@ -218,9 +218,9 @@
 
           <div class="links">
             <ul class="grid">
-              <li><i class="icon-phone"></i> 11 99999-9999</li>
-              <li><i class="icon-map-pin"></i> R. sua rua, 999</li>
-              <li><i class="icon-mail"></i> contato@michelehair.com</li>
+              <li><i class="icon-phone"></i> 11 96849-5977</li>
+              <li><i class="icon-map-pin"></i> Av. Alfredo Ribeiro de Castro, 564</li>
+              <li><i class="icon-mail"></i> grazi.guimaraez@gmail.com</li>
             </ul>
           </div>
         </div>
@@ -232,8 +232,8 @@
     <footer class="section">
       <div class="container grid">
         <div class="brand">
-          <a class="logo logo-alt" href="#home">Michele<span>Hair</span>.</a>
-          <p>©2022 MicheleHair.</p>
+          <a class="logo logo-alt" href="#home">Grazi<span>Guimaraez</span>.</a>
+          <p>©2022 GraziGuimaraez.</p>
           <p>Todos os direitos reservados.</p>
         </div>
 
