--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
             <p>
               Através do baralho cigando mudando vidas e aconselhando pessoas no mundo todo.
             </p>
-            <a class="button" href="#">Agendar um horário</a>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5511968495977&text=Oi! Gostaria de agendar um horário"
+              class="button"
+              target="_blank"
+              >Agendar um Horário</a
+            >
           </div>
         </div>
       </section>
@@ -238,13 +243,13 @@
         </div>
 
         <div class="social">
-          <a href="https://instagram.com" target="_blank">
+          <a href="https://www.instagram.com/grazi.guimaraez/" target="_blank">
             <i class="icon-instagram"></i>
           </a>
-          <a href="https://facebook.com" target="_blank">
+          <!-- <a href="https://www.tiktok.com/@grazi.guimaraez?lang=pt-BR" target="_blank">
             <i class="icon-facebook"></i
-          ></a>
-          <a href="https://youtube.com" target="_blank"
+          ></a> -->
+          <a href="https://www.youtube.com/channel/UC9PT_QaXBuwn9dO8uQ39upw" target="_blank"
             ><i class="icon-youtube"></i
           ></a>
         </div>
