--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="image">
             <img
               src="./assets/fotos/020.png"
-              alt="#"
+              alt="Grazi Guimaraez segurando baralho"
             />
           </div>
           <div class="text">
